coolstore-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"order"},{"apiVersion":"apps/v1","kind":"Deployment","name":"catalog"},{"apiVersion":"apps/v1","kind":"Deployment","name":"inventory"}]'
  labels:
    app: coolstore-ui
    app.kubernetes.io/component: coolstore-ui
    app.kubernetes.io/instance: coolstore-ui
    app.kubernetes.io/part-of: coolstore-ui
    app.openshift.io/runtime: nodejs
  name: coolstore-ui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/part-of: coolstore-ui
      app.openshift.io/runtime: nodejs
      deployment: coolstore-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: coolstore-ui
        app.openshift.io/runtime: nodejs
        deployment: coolstore-ui
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/wkosp-coolstore/coolstore-ui@sha256:c446c5766371e52b8236a38519d87435212da111ae1d7e060e1025c63cd9c0fe
        imagePullPolicy: IfNotPresent
        name: coolstore-ui
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
