coolstore-ui/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: coolstore-ui
    app.kubernetes.io/component: coolstore-ui
    app.kubernetes.io/instance: coolstore-ui
    app.kubernetes.io/part-of: coolstore-ui
    app.openshift.io/runtime: nodejs
  name: coolstore-ui
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: coolstore-ui
    weight: 100
  wildcardPolicy: None
